* Tue Feb 06 2007 Jesse Keating <jkeating@redhat.com>
- yum bestPackagesFromList takes an arch argument. Fixes ppc64 bug
- Don't use 'returnSimple' anymore, deprecated in yum api

* Sat Feb 03 2007 Jesse Keating <jkeating@redhat.com>
- Be able to opt-out of a bugurl since buildinstall supports this
- Make isodir an object of pungi (wwoods)

* Tue Jan 30 2007 Jesse Keating <jkeating@redhat.com>
- implantmd5 _then_ sha1sum.

* Mon Jan 29 2007 Jesse Keating <jkeating@redhat.com>
- Update the comps file again from F7
- Fix the ppc boot flags
- Clean up SRPM-disc junk
- add bugurl config option for anaconda betanag

* Thu Jan 25 2007 Jesse Keating <jkeating@redhat.com>
- Update the comps file from F7

* Wed Jan 24 2007 Jesse Keating <jkeating@redhat.com>
- Add a "flavor" option (such as Desktop)
- Move packageorder file into workdir
- Use some anaconda code to depsolve, gets better (and more common) results

* Tue Jan 23 2007 Jesse Keating <jkeating@redhat.com>
- Now use a manifest to determine what to pull in, not comps itself
- Add a minimal-manifest for test composes
- Add current F7 comps file for test composes
- Bump the iso size to what was used in FC6

* Wed Jan 17 2007 Jesse Keating <jkeating@redhat.com>
- Move splittree workdirs into work/ at the end of the run

* Tue Jan 16 2007 Jesse Keating <jkeating@redhat.com>
- Remove our splittree for rawhide
- Remove old main() sections from pungi.py and gather.py
- Require yum 3.0.3 or newer
- Add rescueCD support

* Wed Dec 13 2006 Jesse Keating <jkeating@redhat.com>
- Fix a bug in DVD repodata
- Add correct ppc boot args
- Set ppc arch correctly

* Mon Dec 11 2006 Jesse Keating <jkeating@redhat.com>
- Now able to get release note files from release note packages.
- Add a config file for the source run

* Sat Dec  9 2006 Jesse Keating <jkeating@redhat.com>
- Now able to do srpms, lots of changes

* Fri Nov 17 2006 Jesse Keating <jkeating@redhat.com>
- First pass at a config file, lots of changes
