@@ -112,17 +112,22 @@ class Gather(yum.YumBase):
         unprocessed_pkgs = {} # list of packages yet to depsolve ## Use dicts for speed
         final_pkgobjs = {} # The final list of package objects
 
-        for pkg in self.pkglist: # cycle through our package list and get repo matches
-            matches = self.pkgSack.searchNevra(name=pkg)
-            mysack = yum.packageSack.ListPackageSack(matches)
-            
-            for match in mysack.returnNewestByNameArch():
-                unprocessed_pkgs[match] = None
-                self.tsInfo.addInstall(match)
+        # Search repos for things in our manifest, supports globs
+        (exactmatched, matched, unmatched) = yum.packages.parsePackages(self.pkgSack.returnPackages(), self.pkglist, casematch=1)
+        matches = exactmatched + matched
+
+        # Get the newest results from the search
+        mysack = yum.packageSack.ListPackageSack(matches)
+        for match in mysack.returnNewestByNameArch():
+            unprocessed_pkgs[match] = None
+            self.tsInfo.addInstall(match)
 
         if not self.config.has_option('default', 'quiet'):
             for pkg in unprocessed_pkgs.keys():
                 self.logger.info('Found %s.%s' % (pkg.name, pkg.arch))
+
+        for pkg in unmatched:
+            self.logger.warn('Could not find a match for %s' % pkg)
 
         if len(unprocessed_pkgs) == 0:
             raise yum.Errors.MiscError, 'No packages found to download.'
